Fix poptrox gallery

--- a/site/themes/hugo-strata-theme/layouts/partials/about.html
+++ b/site/themes/hugo-strata-theme/layouts/partials/about.html
@@ -3,4 +3,6 @@
 		{{ with .Site.Params.about.title }}<h2>{{ . | markdownify }}</h2>{{ end }}
 	</header>
 	{{ with .Site.Params.about.content }}<p>{{ . | markdownify }}</p>{{ end }}
+  <br>
+  <a href="/faq" class="button">Częste pytania</a>
 </section>
