--- a/site/themes/hugo-strata-theme/layouts/partials/portfolio.html
+++ b/site/themes/hugo-strata-theme/layouts/partials/portfolio.html
@@ -1,7 +1,7 @@
 {{ "<!-- portfolio -->" | safeHTML }}
 <section>
 	{{ with .Site.Params.portfolio.title }}<h2>{{ . | markdownify }}</h2>{{ end }}
-	<div class="row">
+	<div class="row" id="gallery">
 		{{ range .Site.Params.portfolio.gallery }}
 		<article class="6u 12u$(xsmall) work-item">
 			<a href="{{ $.Site.BaseURL }}images/{{ .image }}" class="image fit thumb"><img src="{{ $.Site.BaseURL }}images/{{ .thumb }}" alt="" /></a>
