--- a/site/themes/hugo-strata-theme/static/css/main.css
+++ b/site/themes/hugo-strata-theme/static/css/main.css
@@ -1582,11 +1582,21 @@
 		text-decoration: none;
 	}
 
-		a:hover {
-			border-bottom-color: transparent;
-			color: #49bf9d !important;
-			text-decoration: none;
-		}
+	a:hover {
+		border-bottom-color: transparent;
+		color: #49bf9d;
+		text-decoration: none;
+	}
+
+  a.page__title {
+    color: white;
+    border-bottom: transparent;
+  }
+
+  a.page__title:hover {
+    color: white;
+
+  }
 
 	strong, b {
 		color: #787878;
@@ -2016,7 +2026,7 @@
 				border-radius: 0.35em;
 				border: solid 3px rgba(255, 255, 255, 0.5);
 				color: #fff;
-				content: 'View';
+				content: 'Powiększ';
 				display: inline-block;
 				font-size: 0.8em;
 				font-weight: 400;
