--- a/site/themes/hugo-strata-theme/layouts/partials/footer.html
+++ b/site/themes/hugo-strata-theme/layouts/partials/footer.html
@@ -44,6 +44,9 @@
 <script src="{{ .Site.BaseURL }}js/util.js"></script>
 <!--[if lte IE 8]><script src="{{ .Site.BaseURL }}js/ie/respond.min.js"></script><![endif]-->
 <script src="{{ .Site.BaseURL }}js/main.js"></script>
+<script src="{{ .Site.BaseURL }}js/gmap.js"></script>
+
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCF7bPFzbM0jCMjmgHfYkOP5m69n7Q08hs&callback=initMap"></script>
 
 {{ template "_internal/google_analytics_async.html" . }}
 
