--- a/site/themes/hugo-strata-theme/static/css/main.css
+++ b/site/themes/hugo-strata-theme/static/css/main.css
@@ -2473,7 +2473,10 @@
 	#header {
 		background-color: #1f1815;
 		background-attachment: scroll,								fixed;
-		background-image: url("images/overlay.png"), url("../images/bg.jpg");
+		background-image:linear-gradient(
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    ), url("../images/bg.jpg");
 		background-position: top left,							top left;
 		background-repeat: repeat,								no-repeat;
 		background-size: auto,								auto 100%;
@@ -2485,6 +2488,7 @@
 		text-align: right;
 		top: 0;
 		width: 35%;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 	}
 
 		#header strong, #header b {
@@ -3164,4 +3168,9 @@
  .recent-posts li {
 	 font-size: 20px;
 	 line-height: 36px;
+ }
+
+ #map {
+   width: 100%;
+   height: 350px;
  }
