--- a/site/themes/hugo-strata-theme/static/css/main.css
+++ b/site/themes/hugo-strata-theme/static/css/main.css
@@ -1751,6 +1751,7 @@
 
 	header.major h2 {
 		font-size: 2em;
+    margin: 0 0 1em 0;
 	}
 
 /* Form */
@@ -3148,10 +3149,15 @@
 		margin-top: 1.5em;
 	}
 
+  #sidebar ul {
+    padding-left: 0;
+  }
+
 	#sidebar ul li {
 		list-style: none;
 		font-size: 1.35em;
 		line-height: 1.5em;
+    padding-left: 0;
 	}
 
 	#sidebar ul li a,
